--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.20",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.1.0",
     "mongoose": "^7.6.3"
   },
   "devDependencies": {
